05-se/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: lab-se
