05-se/base/sidecar.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
spec:
  egress:
  - hosts:
    - "lab-se/*"
    - "d8-istio/*"
